// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`voiceFamily renders 0 1`] = `
Array [
  .c0 {
  voice-family: 0;
}

<div
    className="c0"
  />,
  .c0 {
  voice-family: 0;
}

<div
    className="c0"
  />,
  .c0 {
  voice-family: 0;
}

<div
    className="c0"
  />,
  .c0 {
  voice-family: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`voiceFamily renders function 1`] = `
Array [
  .c0 {
  voice-family: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  voice-family: has;
}

<div
    className="c0"
  />,
  .c0 {
  voice-family: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  voice-family: has;
}

<div
    className="c0"
  />,
]
`;

exports[`voiceFamily renders invalid theme path 1`] = `
Array [
  .c0 {
  voice-family: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  voice-family: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  voice-family: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  voice-family: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`voiceFamily renders negative number 1`] = `
Array [
  .c0 {
  voice-family: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  voice-family: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  voice-family: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  voice-family: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`voiceFamily renders object [breakpoints + standard] 1`] = `
Array [
  .c0 {
  voice-family: July;
}

@media screen and (min-width:November) {
  .c0 {
    voice-family: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    voice-family: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    voice-family: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    voice-family: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  voice-family: July;
}

@media screen and (min-width:November) {
  .c0 {
    voice-family: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    voice-family: September;
  }
}

@media screen and (min-width:November) {
  .c0 {
    voice-family: November;
  }
}

@media screen and (min-width:August) {
  .c0 {
    voice-family: August;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  .c0 {
  voice-family: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    voice-family: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    voice-family: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    voice-family: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    voice-family: June;
  }
}

<div
    className="c0"
  />,
  .c0 {
  voice-family: January;
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    voice-family: December;
  }
}

@media screen and (min-width:November) {
  .c0 {
    voice-family: April;
  }
}

@media screen and (min-width:November) {
  .c0 {
    voice-family: May;
  }
}

@media screen and (min-width:August) {
  .c0 {
    voice-family: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`voiceFamily renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    voice-family: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    voice-family: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    voice-family: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    voice-family: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    voice-family: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    voice-family: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    voice-family: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    voice-family: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    voice-family: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    voice-family: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    voice-family: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    voice-family: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    voice-family: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    voice-family: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    voice-family: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    voice-family: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`voiceFamily renders object [mediaQueries + standart] 1`] = `
Array [
  .c0 {
  voice-family: July;
}

@media May {
  .c0 {
    voice-family: August;
  }
}

@media April {
  .c0 {
    voice-family: September;
  }
}

@media January {
  .c0 {
    voice-family: November;
  }
}

@media April {
  .c0 {
    voice-family: August;
  }
}

@media June {
  .c0 {
    voice-family: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  voice-family: July;
}

@media May {
  .c0 {
    voice-family: August;
  }
}

@media April {
  .c0 {
    voice-family: September;
  }
}

@media January {
  .c0 {
    voice-family: November;
  }
}

@media April {
  .c0 {
    voice-family: August;
  }
}

@media June {
  .c0 {
    voice-family: November;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  .c0 {
  voice-family: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    voice-family: November;
  }
}

@media April {
  .c0 {
    voice-family: January;
  }
}

@media January {
  .c0 {
    voice-family: December;
  }
}

@media April {
  .c0 {
    voice-family: April;
  }
}

@media June {
  .c0 {
    voice-family: May;
  }
}

<div
    className="c0"
  />,
  .c0 {
  voice-family: April;
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    voice-family: November;
  }
}

@media April {
  .c0 {
    voice-family: January;
  }
}

@media January {
  .c0 {
    voice-family: December;
  }
}

@media April {
  .c0 {
    voice-family: April;
  }
}

@media June {
  .c0 {
    voice-family: May;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`voiceFamily renders object [mediaQueries] 1`] = `
Array [
  @media May {
  .c0 {
    voice-family: July;
  }
}

@media April {
  .c0 {
    voice-family: August;
  }
}

@media January {
  .c0 {
    voice-family: September;
  }
}

@media April {
  .c0 {
    voice-family: November;
  }
}

@media June {
  .c0 {
    voice-family: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    voice-family: July;
  }
}

@media April {
  .c0 {
    voice-family: August;
  }
}

@media January {
  .c0 {
    voice-family: September;
  }
}

@media April {
  .c0 {
    voice-family: November;
  }
}

@media June {
  .c0 {
    voice-family: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    voice-family: January;
  }
}

@media April {
  .c0 {
    voice-family: December;
  }
}

@media January {
  .c0 {
    voice-family: April;
  }
}

@media April {
  .c0 {
    voice-family: May;
  }
}

@media June {
  .c0 {
    voice-family: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    voice-family: January;
  }
}

@media April {
  .c0 {
    voice-family: December;
  }
}

@media January {
  .c0 {
    voice-family: April;
  }
}

@media April {
  .c0 {
    voice-family: May;
  }
}

@media June {
  .c0 {
    voice-family: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`voiceFamily renders postitive number 1`] = `
Array [
  .c0 {
  voice-family: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  voice-family: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  voice-family: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  voice-family: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`voiceFamily renders string 1`] = `
Array [
  .c0 {
  voice-family: July;
}

<div
    className="c0"
  />,
  .c0 {
  voice-family: July;
}

<div
    className="c0"
  />,
  .c0 {
  voice-family: June;
}

<div
    className="c0"
  />,
  .c0 {
  voice-family: June;
}

<div
    className="c0"
  />,
]
`;

exports[`voiceFamily renders undefined 1`] = `
Array [
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
  <div
    className=""
  />,
]
`;

exports[`voiceFamily renders valid theme path 1`] = `
Array [
  .c0 {
  voice-family: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  voice-family: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  voice-family: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  voice-family: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
